[gd_scene load_steps=7 format=2]

[ext_resource path="res://RoadStart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://ui/StartScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/Gameoverscreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/pause.tscn" type="PackedScene" id=6]

[node name="Main" type="Spatial"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, 0, 0, 0 )
script = ExtResource( 3 )

[node name="RoadStart" parent="." instance=ExtResource( 1 )]

[node name="RoadStart2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.766045, 0.492404, 0.413176, -5.61943e-08, -0.642788, 0.766044, 0.642787, -0.586824, -0.492404, -4.92625, 1.73395, 0 )
light_color = Color( 0.992157, 0.984314, 0.827451, 1 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 2 )]
pause_mode = 1

[node name="camerapivot" type="Spatial" parent="."]

[node name="Camera2" type="Camera" parent="camerapivot"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 7 )
fov = 80.0
near = 1.1
far = 300.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StaertScreen" parent="CanvasLayer" instance=ExtResource( 4 )]
pause_mode = 2
__meta__ = {
"_editor_description_": ""
}

[node name="GameoverScreen" parent="CanvasLayer" instance=ExtResource( 5 )]
pause_mode = 2
visible = false

[node name="pause" parent="CanvasLayer" instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[connection signal="obstacle_hit" from="Player" to="." method="_on_Player_obstacle_hit"]
[connection signal="dismissed" from="CanvasLayer/StaertScreen" to="." method="_on_StaertScreen_dismissed"]
[connection signal="dismissed" from="CanvasLayer/GameoverScreen" to="." method="_on_GameoverScreen_dismissed"]
